feat(chat): 添加知识库上传功能并优化查询接口
- 新增知识库上传接口，支持将知识库保存到本地数据库和向量数据库
- 添加根据项目ID查询知识库列表的功能
- 引入 AI 服务模块，用于处理知识库的智能化操作
- 更新相关 Service、Controller 和 Mapper 文件，实现新功能

--- a/guli-admin/pom.xml
+++ b/guli-admin/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>guli-ai</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
