feat(ai): 添加向量数据库配置和知识库保存功能
- 新增 QdrantVectorStoreConfig 类，配置向量数据库初始化
- 新增 SystemConstant 类，定义向量数据库集合名称常量
- 将 ChatKnowledge 和 ChatProject 类从 system 模块移动到 ai 模块
- 更新相关 mapper 和 service 接口的导入路径
- 在 AiService 中添加保存知识库到向量数据库的方法- 在 ChatKnowledgeServiceImpl 中实现文件内容提取和保存逻辑
- 更新 pom.xml 文件，添加 guli-common 依赖并更新 spring-ai版本

--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -64,6 +64,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>guli-common</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
