refactor(guli-ai):重构知识库上传功能并支持Ollama 模型
-将 ChatKnowledge 和 ChatProject 类从 guliai 包移动到 system 包
- 新增对Ollama 模型的支持，包括向量存储和知识库上传- 重构 ChatKnowledgeController 和 ChatProjectController，使用新的 system 包
- 更新 AiService，增加对 Ollama 模型的知识库上传逻辑
- 修改 QdrantVectorStoreConfig，使用新的向量存储名称
- 更新 SystemConstant，添加新的模型类型常量
- 调整 pom.xml 文件，更新依赖关系

--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -67,8 +67,12 @@
 
         <dependency>
             <groupId>com.atguigu</groupId>
-            <artifactId>guli-common</artifactId>
+            <artifactId>guli-system</artifactId>
         </dependency>
+        <!--<dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>guli-common</artifactId>
+        </dependency>-->
     </dependencies>
     <dependencyManagement>
         <dependencies>
