--- a/guli-system/pom.xml
+++ b/guli-system/pom.xml
@@ -23,11 +23,12 @@
             <artifactId>guli-common</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>guli-ai</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+            <scope>compile</scope>
+        </dependency>-->
 
     </dependencies>
 
