feat(ai): 新增聊天功能- 添加 AiController 类，实现创建聊天会话的接口 - 新增 Chat 和 Message 类，用于存储聊天相关数据 - 在 AiService 中实现创建聊天会话的方法- 添加 MongoUtil 工具类，用于确定 MongoDB 集合名称 - 新增 ChatVo、MessageVo 和 QueryVo 类，用于聊天相关的数据传输 - 在 pom.xml 中添加 hutool-all依赖，用于生成唯一标识和日期处理

--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -73,6 +73,12 @@
             <groupId>com.atguigu</groupId>
             <artifactId>guli-common</artifactId>
         </dependency>-->
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.8</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
