feat(ai): 更新 AI 模型并添加聊天记录查询功能
- 更新 AI 模型：将 qwen2:7b 替换为 deepseek-r1:7b
- 添加聊天记录查询功能：在 AiController 中新增 listChat 方法
- 优化 ChatProject 类的代码格式
- 删除 ChatProjectController 中的冗余空行

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -95,7 +95,7 @@ spring:
       base-url: https://api.xty.app
       api-key: sk-sugd0wT7yiRne4Tsjz9KIutWCEQYUTxyLUqC0ApA7pHQJqmY
     ollama:
-      # ollama config: qwen2:7b  llama3:latest
+      # ollama config: deepseek-r1:7b  llama3:latest
       base-url: http://localhost:11434
       embedding:
         model: deepseek-r1:7b
