--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -99,6 +99,8 @@ spring:
       base-url: http://localhost:11434
       embedding:
         model: deepseek-r1:7b
+      chat:
+        model: deepseek-r1:7b
     vectorstore:
       qdrant:
         host: localhost
