--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.huaban</groupId>
+            <artifactId>jieba-analysis</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
