feat(ai): 更新 Ollama模型并配置向量维度- 将 Ollama 模型从 deepseek-r1:7b 更改为 deepseek-r1:1.5b - 在 application.yml 中添加 Ollama嵌入向量维度配置 - 更新 QdrantVectorStore 配置，移除 collectionName 设置- 调整 SystemConstant 中的向量存储常量 - 修改 ChatProject 中的模型描述- 更新前端项目选择中的 Ollama 模型选项

--- a/guli-ai/src/main/resources/application.yml
+++ b/guli-ai/src/main/resources/application.yml
@@ -6,3 +6,9 @@ logging:
           chat:
             client:
               advisor: DEBUG
+
+spring:
+  ai:
+    ollama:
+      embedding:
+        dimensions: 3584 # ollama嵌入向量维度
