config(ollama): 更新 Ollama 配置参数并调整 AI 操作策略
- 在 application.yml 中添加 Ollama 嵌入向量维度配置
-调整 chat 模型配置，增加 temperature 和 top-p 参数- 修改 OllamaAiOperator 中的 chat_stream 方法，优化知识库匹配规则
- 删除 guli-ai 中的 embedding 维度配置
- 添加 VSCode 设置文件，启用 Codegeex 仓库索引

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -107,8 +107,13 @@ spring:
       base-url: http://localhost:11434
       embedding:
         model: deepseek-r1:1.5b
+        dimensions: 1536 # ollama嵌入向量维度
       chat:
         model: deepseek-r1:1.5b
+        options:
+          temperature: 0.2  # 降低温度值抑制随机性
+          top-p: 0.2        # 控制多样性
+#          repeat_penalty: 1.5  # 添加重复惩罚系数
     vectorstore:
       qdrant:
         host: localhost
