--- a/guli-ai/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/guli-ai/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "spring.ai.ollama.embedding.dimensions",
       "type": "java.lang.String",
       "description": "Description for spring.ai.ollama.embedding.dimensions."
-  }
-] }
+    },
+    {
+      "name": "spring.ai.ollama.embedding.dimensions",
+      "type": "java.lang.String",
+      "description": "Description for spring.ai.ollama.embedding.dimensions."
+    }
+  ] }
