--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -106,10 +106,10 @@ spring:
       # ollama config: deepseek-r1:1.5b  llama3:latest
       base-url: http://localhost:11434
       embedding:
-        model: deepseek-r1:1.5b
+        model: qwen2.5:1.5b
         dimensions: 1536 # ollama嵌入向量维度
       chat:
-        model: deepseek-r1:1.5b
+        model: qwen2.5:1.5b
         options:
           temperature: 0.2  # 降低温度值抑制随机性
           top-p: 0.2        # 控制多样性
@@ -119,6 +119,12 @@ spring:
         host: localhost
         port: 6334
         initialize-schema: true
+
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/itheima?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&tinyInt1isBit=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&useServerPrepStmts=false
+#    username: root
+#    password: 123456
   main:
     allow-bean-definition-overriding: true
 # token配置
