--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
     <dependencyManagement>
         <dependencies>
 
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+                <version>3.5.10.1</version>
+            </dependency>
+
             <!-- SpringFramework的依赖配置-->
             <!--<dependency>
                 <groupId>org.springframework</groupId>
