feat(ai): 重构 AI 服务并添加新功能
- 更新日志级别配置，增加 AI 相关的日志
- 重构 ChatClient 创建逻辑，支持 OpenAI模型
- 新增 DatabaseQueryTools 工具类，用于查询聊天记录
- 更新 CourseTools 中的工具方法，增加参数注解
- 修改 OpenAiOperator 中的聊天逻辑，使用 ChatClient
- 优化 AiService 中的查询和聊天逻辑
- 更新 SystemConstant 中的系统角色设定，增加强制规则

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -36,6 +36,9 @@ logging:
   level:
     com.atguigu: debug
     org.springframework: warn
+    org.springframework.ai.chat: TRACE  # 添加这一行
+    org.springframework.ai: debug # AI对话的日志级别
+    com.itheima.ai: debug # 本项目的日志级别
 
 # 用户配置
 user:
