feat(ai): 优化 OpenAI模型使用流程并调整向量检索逻辑
- 在 application.yml 中添加 max-tokens 配置项
- 更新 SystemConstant 中的规则说明，增加校区课程预约相关规则
- 修改 AiService 中的向量检索逻辑，对 OpenAI模型进行特殊处理
-优化 OllamaAiOperator 中的文档过滤逻辑，确保只返回当前项目的文档
- 更新 OpenAiOperator，移除向量检索相关代码，增加系统消息处理
-调整 CourseTools 中的工具描述，提高可读性和准确性

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -102,6 +102,7 @@ spring:
       chat:
         options:
           model: qwen-plus
+          max-tokens: 2000
       embedding:
         options:
           model: text-embedding-v1 #如果要使用阿里云百炼,一定要手动配置这个embedding的model
