feat(ai): 重构 AI 模型并添加新功能
- 新增 RecordOptimizationAdvisor 用于优化聊天记录
- 重构 AbstractAgent，增加 tools() 方法
- 更新 RecommendAgent 和 ReservationAgent，添加所需工具
- 修改 RouteAgent，简化路由逻辑
- 更新 AiAdvisorConfig，添加 recordOptimizationAdvisor
- 调整 SystemConstant，添加新的提示词常量
- 新增 SessionContext 用于管理会话 ID
- 更新 AiService，添加删除消息功能
- 重构 OpenAiOperator，优化消息处理逻辑- 新增 CourseQueryTools 和 ReservationTools 作为 AI 工具

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
     <!-- 依赖声明 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-core</artifactId>
+                <version>1.0.0-M6</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -244,12 +249,9 @@
 
     <repositories>
         <repository>
-            <id>public</id>
-            <name>aliyun nexus</name>
+            <id>aliyun-public</id>
+            <name>Aliyun Public</name>
             <url>https://maven.aliyun.com/repository/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
         </repository>
         <repository>
             <id>spring-milestones</id>
