--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -84,6 +84,16 @@
             <artifactId>jieba-analysis</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-client-chat</artifactId>
+            <version>1.0.0-M7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-core</artifactId>
+            <version>1.0.0-M2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
