feat(ai): 新增地图查询功能
- 添加地图查询智能体和相关工具
- 实现城市实时天气、未来天气和IP定位查询
- 更新系统常量和智能体类型枚举
- 添加MCP配置和客户端传输

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -126,7 +126,16 @@ spring:
         port: 6334
         initialize-schema: true
 
-#  datasource:
+    mcp:
+      client:
+        connection-timeout: 60s
+        type: ASYNC
+      amap:
+        api:
+          key: ${AMAP_API_KEY}  # 替换为实际的高德API密钥
+
+
+  #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://localhost:3306/itheima?serverTimezone=Asia/Shanghai&useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&tinyInt1isBit=false&allowPublicKeyRetrieval=true&allowMultiQueries=true&useServerPrepStmts=false
 #    username: root
