feat(ai): 重构智能体路由系统并优化对话管理
- 更新智能体接口和实现类，使用自定义Message类型
- 新增SessionContextManager类管理会话上下文
- 重构AgentCoordinatorService类，优化智能体协调逻辑- 更新AiService类，确保正确传递历史消息
- 调整OpenAiOperator类，直接使用传入的消息数组
- 优化智能体提示词和路由逻辑，提高对话效率

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -103,11 +103,11 @@ spring:
       api-key: ${ALIYUN_API_KEY} #读取环境变量中的阿里百炼 api key
       chat:
         options:
-          model: qwen-plus
+          model: qwen-plus-2025-04-28
           max-tokens: 2000
       embedding:
         options:
-          model: text-embedding-v1 #如果要使用阿里云百炼,一定要手动配置这个embedding的model
+          model: text-embedding-v3 #如果要使用阿里云百炼,一定要手动配置这个embedding的model
     ollama:
       # ollama config: deepseek-r1:1.5b  llama3:latest
       base-url: http://localhost:11434
