--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -103,7 +103,7 @@ spring:
       api-key: ${ALIYUN_API_KEY} #读取环境变量中的阿里百炼 api key
       chat:
         options:
-          model: qwen-plus-latest
+          model: qwen-turbo
           max-tokens: 2000
       embedding:
         options:
