--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -123,6 +123,24 @@
             <artifactId>spring-ai-core</artifactId>
             <version>1.0.0-M2</version>
         </dependency>
+        <!-- PDF解析 -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.29</version>
+        </dependency>
+    
+        <!-- Word解析 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>5.2.3</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
