--- a/guli-system/pom.xml
+++ b/guli-system/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>spring-ai-ollama</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-support</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
         <!--<dependency>
             <groupId>com.atguigu</groupId>
