refactor(guli-ai):重构 OllamaAiOperator 类并优化相关功能
- 新增 AiConfig 配置类，移除错误的 TikaDocumentReader 配置
- 重构 OllamaAiOperator 类，优化文档处理和查询重写功能
- 更新 pom.xml，添加必要的文档读取依赖
- 修复了多个功能模块中的错误和不足，提高了系统的稳定性和准确性

--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -141,6 +141,20 @@
             <artifactId>poi-scratchpad</artifactId>
             <version>5.2.3</version>
         </dependency>
+        <!-- 需要添加的文档读取依赖 -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-tika-document-reader</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-markdown-document-reader</artifactId>
+          <version>1.0.0-M6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-core</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
