refactor(guli-ai):重构 OllamaAiOperator 组件
- 移除了不必要的导入和未使用的变量
- 优化了文档添加和查询重写逻辑- 添加了关键词提取功能
- 调整了日志输出格式和级别
- 重构了相似度搜索和聊天流处理方法

--- a/guli-ai/src/main/resources/application.yml
+++ b/guli-ai/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 logging:
   level:
-    org:
-      springframework:
-        ai:
-          chat:
-            client:
-              advisor: DEBUG
-
+    root: INFO
+    com.atguigu.guliai.strategy: INFO
+    org.springframework.ai: INFO
+    org.springframework.ai.chat.client.advisor: DEBUG
