refactor(guli-ui): 更新项目标题和描述
- 将项目标题从"小谷同学"改为"智能助手管理系统"
- 更新项目描述为"智能助手管理系统"
- 修改涉及文件:
  - .env.development
  - .env.production
  - .env.staging  - package.json
  - vue.config.js

--- a/guli-ui/package.json
+++ b/guli-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atguigu",
   "version": "3.8.7",
-  "description": "小谷同学管理系统",
+  "description": "智能助手管理系统",
   "author": "li xianfeng",
   "license": "MIT",
   "scripts": {
