--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>spring-ai-starter-mcp-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-rag</artifactId>
+        </dependency>
+
         <!--<dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-mcp-client-webflux</artifactId>
