feat(ai): 重构地图查询功能并优化 MCP 客户端配置
- 重构 MapsQueryAgent 类，使用 ChatClient 替代 AmapTools
- 新增 McpClientConfig 配置类，自定义 MCP 客户端
- 新增 AmapMcpService服务类，封装 MCP 工具调用
- 新增 McpConnectionManager 连接管理类，监控 MCP 连接状态
- 新增 McpHealthController 控制器，提供 MCP 健康检查接口
- 新增 McpToolValidator 组件，验证 MCP工具连接
- 更新 application.yml 配置文件，调整 MCP客户端参数
- 修改 SystemConstant 中的地图查询提示词，适应新的 MCP 工具

--- a/guli-admin/src/main/resources/application.yml
+++ b/guli-admin/src/main/resources/application.yml
@@ -127,12 +127,20 @@ spring:
 
     mcp:
       client:
-        connection-timeout: 60s
-        type: ASYNC
-      amap:
-        api:
-          key: ${AMAP_API_KEY}  # 替换为实际的高德API密钥
-
+        enabled: true
+        name: amap-mcp-client
+        version: 1.0.0
+        request-timeout: 180s  # 增加到3分钟
+        type: SYNC
+        toolcallback:
+          enabled: true
+        sse:
+          connections:
+            amap:
+              url: https://mcp.amap.com
+              sse-endpoint: /sse?key=${AMAP_API_KEY}
+              read-timeout: 180s      # 增加读取超时
+              connect-timeout: 90s   # 增加连接超时
 
   #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
