--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -127,7 +127,7 @@
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-client-chat</artifactId>
-            <version>1.0.0-M7</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
