feat(ai): 实现知识库删除时同步更新向量数据库
- 在 ChatKnowledgeController 和 ChatProjectController 中添加删除操作时触发向量库删除
- 在 AiService 中实现 deleteKnowledgeVectors 和 deleteKnowledgeVectorsByProjectId 方法
- 优化 OllamaAiOperator 中的 RAG 检索逻辑，移除冗余的相似度搜索实现
- 更新 ChatKnowledgeMapper 和 ChatKnowledgeServiceImpl，支持按项目 ID 删除知识库记录

--- a/guli-ai/pom.xml
+++ b/guli-ai/pom.xml
@@ -129,18 +129,7 @@
             <artifactId>spring-ai-client-chat</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-core</artifactId>
-            <version>1.0.0-M2</version>
-        </dependency>
-        <!-- PDF解析 -->
-        <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>2.0.29</version>
-        </dependency>
-    
+
         <!-- Word解析 -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -156,15 +145,48 @@
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-tika-document-reader</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.pdfbox</groupId>
+                    <artifactId>pdfbox</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.pdfbox</groupId>
+                    <artifactId>fontbox</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.pdfbox</groupId>
+                    <artifactId>pdfbox-tools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.pdfbox</groupId>
+                    <artifactId>xmpbox</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-markdown-document-reader</artifactId>
-          <version>1.0.0-M6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-core</artifactId>
+        </dependency>
+        <!-- 新增：Spring AI 官方 PDF DocumentReader -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-pdf-document-reader</artifactId>
+        </dependency>
+        <!-- 显式引入 pdfbox 3 以满足 PagePdfDocumentReader 运行时类 -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox-io</artifactId>
+            <version>3.0.2</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
